--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "latest",
     "react-slick": "^0.30.3",
+    "react-swipeable": "^7.0.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.16"
   },
